--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,12 +42,6 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    App\BlogsService\Infrastructure\Cache\Cache:
-        arguments: ['@cache.blogs', 'blogs-frontend.app.%cosmos_component_release%']
-
-    App\BlogsService\Infrastructure\Cache\CacheInterface:
-        alias: App\BlogsService\Infrastructure\Cache\Cache
-
     App\BlogsService\Service\AuthorService:
         factory: ['@App\BlogsService\Service\ServiceFactory', 'getAuthorService']
 
@@ -95,8 +89,9 @@ services:
 
     BBC\ProgrammesMorphLibrary\MorphClient:
         arguments:
-            - '@logger'
             - '@csa_guzzle.client.default'
+            - '@BBC\ProgrammesCachingLibrary\Cache'
+            - '@logger'
             - '%app.morph.endpoint%'
 
     cache.default_redis_provider:
@@ -156,3 +151,12 @@ services:
               default_domain: 'blogs'
               debug: '%kernel.debug%'
               basepath: '%kernel.project_dir%/translations'
+
+
+    ## Caching Library
+
+    BBC\ProgrammesCachingLibrary\CacheInterface:
+        alias: BBC\ProgrammesCachingLibrary\Cache
+
+    BBC\ProgrammesCachingLibrary\Cache:
+        arguments: ['@cache.blogs', 'blogs-frontend.%cosmos_component_release%']
