--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.0",
+        "johnkary/phpunit-speedtrap": "^2.0",
         "phpstan/phpstan": "^0.9",
         "phpstan/phpstan-phpunit": "^0.9",
         "squizlabs/php_codesniffer": "^3.1",
