--- a/project.json
+++ b/project.json
@@ -17,14 +17,14 @@
             "comment": "We're targeting c4.xlarge instances",
             "front_controller": "index.php",
 
-            "opcache.max_accelerated_files": 7963,
-            "opcache.memory_consumption": 64,
+            "opcache.max_accelerated_files": 20000,
+            "opcache.memory_consumption": 128,
             "opcache.interned_strings_buffer": 16,
             "memory_limit": "128m",
             "max_execution_time": 30,
             "fpm.mode": "dynamic",
             "fpm.process_idle_timeout": "10s",
-            "fpm.max_children": 162,
+            "fpm.max_children": 60,
             "fpm.start_servers": 32,
             "fpm.min_spare_servers": 22,
             "fpm.max_spare_servers": 42,
@@ -37,7 +37,8 @@
             "nginx.gzip_experimental_config": true,
             "nginx.force_http_to_https_redirect": true,
             "nginx.remove_trailing_slashes": true,
-            "nginx.redirect_cache_max_age": 3600
+            "nginx.redirect_cache_max_age": 3600,
+            "nginx.fastcgi_buffers": "500 4k"
         }
     }
 }
