--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sass-error": "^1.0.5",
     "gulp-sourcemaps": "^2.6.1",
     "lazysizes": "^4.0.1",
+    "picturefill": "^3.0.2",
     "run-sequence": "^2.2.0",
     "sass-lint": "^1.12.1",
     "sass-mq": "^3.3.2"
