--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -38,5 +38,9 @@
         <listener class="JohnKary\PHPUnit\Listener\SpeedTrapListener" />
     </listeners>
 
-
+    <logging>
+        <log type="junit" target="./build/reports/test-results.xml" />
+        <log type="coverage-html" target="./build/reports/coverage" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-clover" target="./build/reports/coverage.xml"/>
+    </logging>
 </phpunit>
