--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,18 +19,9 @@
         <!-- define your env variables for the test env here -->
     </php>
 
-    <!-- This looks kinda odd, but it means that the speedy unit tests run
-        before the slower functional tests so you get feedback faster -->
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="Application Test Suite">
             <directory>tests/</directory>
-            <exclude>tests/Command</exclude>
-            <exclude>tests/Controller</exclude>
-        </testsuite>
-
-        <testsuite name="Functional Test Suite">
-            <directory>tests/Command</directory>
-            <directory>tests/Controller</directory>
         </testsuite>
     </testsuites>
 
@@ -48,9 +39,8 @@
     </listeners>
 
     <logging>
-        <log type="junit" target="./build/reports/test-results.xml" logIncompleteSkipped="true"/>
-        <log type="coverage-html" target="./build/reports/coverage" charset="UTF-8"
-             highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="junit" target="./build/reports/test-results.xml" />
+        <log type="coverage-html" target="./build/reports/coverage" lowUpperBound="35" highLowerBound="70"/>
         <log type="coverage-clover" target="./build/reports/coverage.xml"/>
     </logging>
 </phpunit>
