Redirect comments routes to comments section

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -37,12 +37,20 @@ blog:
 
 comments_partial:
     path: /blogs/{blogId}/entries/{guid}/comments/standalone
-    defaults: { _controller: App\Controller\CommentsPartialController }
+    defaults:
+        _controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+        route: post
+        _fragment: 'comments'
+        permanent: true
     requirements: { blogId: '[a-z0-9]+', guid: '^[a-f\d]{8}(-[a-f\d]{4}){4}[a-f\d]{8}$' }
 
 comments_index:
     path: /blogs/{blogId}/entries/{guid}/comments
-    defaults: { _controller: App\Controller\CommentsIndexController }
+    defaults:
+        _controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+        route: post
+        _fragment: 'comments'
+        permanent: true
     requirements: { blogId: '[a-z0-9]+', guid: '^[a-f\d]{8}(-[a-f\d]{4}){4}[a-f\d]{8}$' }
 
 post:
