Added comments module version

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,7 @@ parameters:
     app.feed_env.orbit: 'live'
     app.feed_env.branding: 'live'
     app.feed_env.comments: 'live'
+    app.comments.version: '1.69.0'
     app.orbit_client.class: BBC\BrandingClient\OrbitClient
     app.morph.endpoint: 'https://morph.api.bbci.co.uk'
     cosmos_component_release: '%app_release_number%'
@@ -71,6 +72,7 @@ services:
             - '@BBC\ProgrammesMorphLibrary\MorphClient'
             - '%comments_api_key%'
             - '%app.feed_env.comments%'
+            - '%app.comments.version%'
 
     App\ValueObject\CosmosInfo:
         arguments: ['%cosmos_component_release%', '%cosmos_environment%', '%app.endpoint_host%']
