--- a/config/services.yaml
+++ b/config/services.yaml
@@ -54,6 +54,9 @@ services:
     App\BlogsService\Service\BlogService:
         factory: ['@App\BlogsService\Service\ServiceFactory', 'getBlogService']
 
+    App\BlogsService\Service\LegacyBlogService:
+        factory: ['@App\BlogsService\Service\ServiceFactory', 'getLegacyBlogService']
+
     App\BlogsService\Service\PostService:
         factory: ['@App\BlogsService\Service\ServiceFactory', 'getPostService']
 
@@ -141,6 +144,10 @@ services:
         class: "%app.metric_cache.class%"
 
     App\EventSubscriber\MonitoringSubscriber:
+        tags:
+            - { name: 'kernel.event_subscriber' }
+
+    App\EventSubscriber\ArchivedBlogsSubscriber:
         tags:
             - { name: 'kernel.event_subscriber' }
 
