--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,13 +1,15 @@
 parameters:
+    excludes_analyse:
+        - src/BlogsService/Mapper/IsiteToDomain/PostMapper.php
     ignoreErrors:
         - '#Calling method getContent\(\) on possibly null value of type Symfony\\Component\\HttpFoundation\\Response|null#'
         - '#Call to an undefined method Tests\\App\\Translate\\TranslatableTraitTest::tr\(\).#'
         - '#RedisCluster#' #PHPStan does not play well with RedisCluster it seems
         - '#Method App\\BlogsService\\Infrastructure\\MapperFactory::\w*Mapper\(\) should return App\\BlogsService\\Mapper\\IsiteToDomain\\\w*Mapper but returns App\\BlogsService\\Mapper\\IsiteToDomain\\Mapper.#'
         - '#Call to an undefined method Tests\\App\\Twig\\TranslateAndTimeExtensionTest::localDateIntl\(\).#'
-        - '#Binary operation "." between .Invalid Module Type…. and array|string results in an error.#'
         - '#Parameter \#1 $data of class SimpleXMLElement constructor expects string, string|false given.#'
         - '#App\\BlogsService\\StubService\\LegacyBlogStubService::__construct\(\) does not call parent constructor from App\\BlogsService\\Service\\LegacyBlogService.#'
+        - '#$subject of function str_replace expects array|string, SimpleXMLElement given.#'
 
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
