- update composer to check required packages platform are installed - author is optional for blogs post but required to build a valid article schema so if the author is not present, set it to BBC (same author we use in programmes-frontend articles)

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "php": "^7.1.0",
         "ext-redis": "*",
         "ext-apcu": "*",
+        "ext-json": "*",
         "bbc-rmp/cloudwatch-monitoringhandler": "^1.0",
         "bbc-rmp/translate": "^1.8.9",
         "bbc/branding-client": "^2.5",
