--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     ],
     "require": {
-        "php": "^7.1.0",
+        "php": ">=7.3.10",
         "ext-redis": "*",
         "ext-apcu": "*",
         "ext-json": "*",
