--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
         "ext-apcu": "*",
         "ext-json": "*",
         "bbc-rmp/cloudwatch-monitoringhandler": "^1.0",
-        "bbc-rmp/translate": "^1.8.9",
+	"symfony/translation": "4.3.2",
         "bbc/branding-client": "^3.0.0",
         "bbc/gel-iconography-assets": "^2.1.1",
         "bbc/programmes-morph-library": "^1.0",
-        "cakephp/chronos": "^1.2",
+        "cakephp/chronos": "^1.1",
         "cakephp/utility": "^3.6",
         "csa/guzzle-bundle": "^3.1",
         "fzaninotto/faker": "^1.8",
@@ -105,7 +105,7 @@
         "symfony": {
             "id": "01BXQ63SY7AN2CGC7144SGPBHR",
             "allow-contrib": false,
-            "require": "~4.3"
+            "require": "~4.3.0"
         },
         "incenteev-parameters": {
             "file": "config/parameters.yaml"
